1999-05-16  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* profile.h: Add comments.
	Remove unneccesary struct decl.

	* main.cc (main): Make the profile object file-local.
	(edit_options): Call profile::save.

	* profile.cc (options_changed): Just set changed instead of save.
	(save): Do not save if not changed.
	(restore): Clear changed.
	(open): New function.
	(profile): Remove all arguments.  Initialize changed to false.

	* profile.h (options_callback): Add member: changed.

	* options.cc (add, ~controller, remove_widget): New functions of
	class controller.
	(populate, create_widget): Use controller::func_data.
	(create_widget): Use controller::add.
	(~options_dialog, remove_widget): Removed from class
	options_dialog.
	(handle_ok): Use controller::to_ptr.

	* options.h (class controller): New class.
	(class options_dialog): Derive from controller and remove
	duplicate members.

	* main.cc (edit_options): Use the new interface.

	* options.h (class options_dialog): Update members.
	(class options_dialog): Move create_widget to protected.

	* options.cc (create_widget): Do not set modal.
	(act): New function.
	(~options_dialog): Set sensitive flags to false, too.
	(handle_ok, handle_cancel, handle_delete_event, remove_widget):
	Add `throw ()'.
	(remove_widget): Remove a diagnostic log message.

1999-05-15  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* TODO: Modified.

	* configure.in: Set VERSION to 1.4.0.

	* main.cc: Include <sys/stat.h>.

	* NEWS: Modified.

	* configure.in: Add check for mkdir.
	Set VERSION to 1.3.1.

	* main.cc (main): Make ~/.rglclock directory.

	* clockoptions.cc (create_widget): Put unit after the spin button.

	* glclock.cc (update): Draw only for drawable widgets.

	* rglclock.1: Remove keyword substitutions for Package and
	Version.

	* configure.in: Remove PRCS keyword substitutions.

	* TODO: Modified.

1999-05-04  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* TODO: Modified.

	* main.cc (main): Add p as a callback of c.